--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -41,3 +41,10 @@ jobs:
         with:
           name: build-reports
           path: '**/build/reports/'
+      - name: Create snapshot
+        if: github.event_name == 'push'
+        uses: WarpBuilds/snapshot-save@feat/snp-rnr-action
+        with:
+          warpbuild-base-url: "https://api.dev.warpbuild.dev/api/v1"
+          wait-timeout-minutes: 30
+          alias: "wb-spring-boot-snp-0"
